[package]
name = "mdxjs"
version = "0.1.0"
authors = ["Titus Wormer <tituswormer@gmail.com>"]
edition = "2018"
rust-version = "1.56"
description = "Compile MDX to JavaScript in Rust."
homepage = "https://github.com/wooorm/mdxjs-rs"
repository = "https://github.com/wooorm/mdxjs-rs"
license = "MIT"
keywords = ["markdown", "mdx", "compile"]
categories = ["compilers", "text-processing"]
include = ["src/", "license"]

[features]
serializable = ["serde"]

[dependencies]
markdown = "1.0.0-alpha.2"
swc_core = { features = [
  "ecma_ast",
  "ecma_visit",
  "ecma_codegen",
  "ecma_parser",
  "common",
], version = "0.40.16" }

serde = { version = "1", optional = true }

[dev-dependencies]
pretty_assertions = "1"
