[package]
name = "mdxjs"
version = "0.1.23"
authors = ["Titus Wormer <tituswormer@gmail.com>"]
edition = "2018"
rust-version = "1.56"
description = "Compile MDX to JavaScript in Rust."
homepage = "https://github.com/wooorm/mdxjs-rs"
repository = "https://github.com/wooorm/mdxjs-rs"
license = "MIT"
keywords = ["markdown", "mdx", "compile"]
categories = ["compilers", "text-processing"]
include = ["src/", "license"]

[features]
serializable = ["serde"]

[dependencies]
markdown = "1.0.0-alpha.16"
scoped-tls = "1.0.1"
serde = { version = "1", optional = true }
swc_core = { version = "0.90.0", features = [
  "ecma_ast",
  "ecma_visit",
  "ecma_codegen",
  "ecma_parser",
  "common",
] }

[dev-dependencies]
pretty_assertions = "1"
